--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <script src="js/music-list.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/analizer-music.js"></script>
+<!--     <script src="js/analizer-music.js"></script> -->
 </body>
 
 </html>
